--- a/frontendSrc/styles.less
+++ b/frontendSrc/styles.less
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    color: white !important;
+    background-color: #101013 !important;
+}
+
+.page{
+    padding-top: 50px;
+    height: 100vh;
+    width: 100vw;
+}
+
+.modal{
+    color:black;
+}
+
+
+.responsive-square{
+  text-align:left;
+  position:relative;
+  width:100%;
+}
+
+.responsive-square:after{
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.responsive-square .square-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.one-line{
+  overflow:hidden;
+  white-space: nowrap;
+  text-overflow:ellipsis;
+}
+
