--- a/frontendSrc/app/landing/landing.component.less
+++ b/frontendSrc/app/landing/landing.component.less
@@ -1,4 +1,20 @@
-h1{
-    margin-top: 70px;
-    text-align: center;
+.videos{
+    padding-top: 50px;
+}
+
+.video{
+    padding:5px;
+    cursor: pointer;
+    background-color: #333;
+    border-radius: 5px;
+    img{
+        object-fit: cover;
+    }
+    a{
+        color:lightgray;
+        font-size: 1.4em;
+    }
+    a:hover{
+        color:white;
+    }
 }
