--- a/frontendSrc/app/nav/nav.component.html
+++ b/frontendSrc/app/nav/nav.component.html
@@ -1,22 +1,28 @@
-<nav scrollSpy id="mainNav" class="navbar navbar-default navbar-fixed-top" [ngClass]="{'affix': navScroll>50}">
+<div class="nav-container"><nav scrollSpy id="mainNav" class="navbar navbar-inverse navbar-fixed-top" [ngClass]="{'affix': navScroll>50}">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed toggle-nav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only ">Toggle navigation</span> <i class="fa fa-bars"></i>
                 </button>
-            <a class="navbar-brand page-scroll" href="javascript:void(0)">Navigation bar</a>
+            <a class="navbar-brand" href="javascript:void(0)" (click)="home()">DashTube</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="javascript:void(0)">Test</a>
+                    <a href="javascript:void(0)" *ngIf="!appUser" (click)="login()">Login</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" *ngIf="!appUser" (click)="register()">Register</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)" *ngIf="appUser" (click)="upload()">Upload</a>
                 </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
-</nav>
+</nav></div>
