--- a/frontendSrc/app/nav/nav.component.html
+++ b/frontendSrc/app/nav/nav.component.html
@@ -3,7 +3,10 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed toggle-nav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only ">Toggle navigation</span> <i class="fa fa-bars"></i>
+                              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
                 </button>
             <a class="navbar-brand" href="javascript:void(0)" (click)="home()">DashTube</a>
         </div>
