--- a/frontendSrc/app/nav/nav.component.html
+++ b/frontendSrc/app/nav/nav.component.html
@@ -1,7 +1,7 @@
-<div class="nav-container"><nav scrollSpy id="mainNav" class="navbar navbar-inverse navbar-fixed-top" [ngClass]="{'affix': navScroll>50}">
+<div class="nav-container">
+  <nav scrollSpy id="mainNav" class="navbar navbar-inverse navbar-fixed-top" [ngClass]="{'affix': navScroll>50}">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+              <div class="navbar-header">
            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -10,9 +10,11 @@
                 </button>
             <a class="navbar-brand" href="javascript:void(0)" (click)="home()">DashTube</a>
         </div>
+              <div class="collapse navbar-collapse" id="navbar">
+        <!-- Brand and toggle get grouped for better mobile display -->
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar">
+
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="javascript:void(0)" *ngIf="!appUser" (click)="login()">Login</a>
